--- a/app/scss/layouts/home.scss
+++ b/app/scss/layouts/home.scss
@@ -1,21 +1,57 @@
 @use "abstracts" as *;
 
 .home {
-  background: url(../assets/home/background-home-mobile.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: bottom;
+  display: flex;
+  flex-direction: column;
+}
+
+.h-details {
+  display: flex;
+  flex-direction: column;
+  height: 85vh;
+  justify-content: space-around;
+  width: 90vw;
+  max-width: rem(400);
+  // width: min(rem(400), 90vw); //alternative to width + max-width property
+  margin-inline: auto;
+  text-align: center;
 
   @include breakpoint(medium) {
-    background: url(../assets/home/background-home-tablet.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: bottom;
+    height: 70vw;
+    min-height: rem(750);
+    max-width: rem(475);
   }
+
   @include breakpoint(large) {
-    background: url(../assets/home/background-home-desktop.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: space-between;
+    text-align: start;
+    max-width: rem(1100);
+    min-height: fit-content;
+    height: fit-content;
+    margin: auto;
+  }
+
+  .title {
+    text-transform: uppercase;
+    color: hsl(var(--clr-light));
+
+    & span {
+      display: inline-block;
+      color: hsl(var(--clr-white));
+      margin-top: rem(20);
+    }
+  }
+
+  .description {
+    font-size: var(--fs-300);
+    color: hsl(var(--clr-light));
+    margin-top: rem(30);
+
+    @include breakpoint(large) {
+      max-width: rem(470);
+      font-size: var(--fs-400);
+    }
   }
 }
