--- a/app/scss/base/reset.scss
+++ b/app/scss/base/reset.scss
@@ -68,6 +68,11 @@ select {
   font: inherit;
 }
 
+hr {
+  border: 0;
+  border-bottom: 1px solid hsl(var(--clr-white) / 0.2);
+}
+
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
   *,
