--- a/app/scss/util/typography.scss
+++ b/app/scss/util/typography.scss
@@ -1,74 +1,84 @@
-// Currently not using these utility classes. Can be used in future
-// @use "abstracts" as *;
+@use "abstracts" as *;
 
-// .ff-bellefair {
-//   font-family: var(--ff-bellefair);
-// }
-// .ff-condensed {
-//   font-family: var(--ff-condensed);
-// }
-// .ff-barlow {
-//   font-family: var(--ff-barlow);
-// }
+.ff-bellefair {
+  font-family: var(--ff-bellefair);
+}
+.ff-condensed {
+  font-family: var(--ff-condensed);
+}
+.ff-barlow {
+  font-family: var(--ff-barlow);
+}
 
-// .letter-spacing-1 {
-//   letter-spacing: rem(4.75);
-// }
-// .letter-spacing-2 {
-//   letter-spacing: rem(2.7);
-// }
-// .letter-spacing-3 {
-//   letter-spacing: rem(2.35);
-// }
+.letter-spacing-1 {
+  letter-spacing: rem(4.75);
+}
+.letter-spacing-2 {
+  letter-spacing: rem(2.7);
+}
+.letter-spacing-3 {
+  letter-spacing: rem(2.35);
+}
 
-// .uppercase {
-//   text-transform: uppercase;
-// }
+.uppercase {
+  text-transform: uppercase;
+}
 
-// .text-accent {
-//   color: hsl(var(--clr-light));
-// }
-// .text-white {
-//   color: hsl(var(--clr-white));
-// }
-// .text-dark {
-//   color: hsl(var(--clr-dark));
-// }
+.text-accent {
+  color: hsl(var(--clr-light));
+}
+.text-white {
+  color: hsl(var(--clr-white));
+}
+.text-dark {
+  color: hsl(var(--clr-dark));
+}
 
-// .fs-900 {
-//   font-size: var(--fs-900);
-// }
-// .fs-800 {
-//   font-size: var(--fs-800);
-// }
-// .fs-700 {
-//   font-size: var(--fs-700);
-// }
-// .fs-600 {
-//   font-size: var(--fs-600);
-// }
-// .fs-500 {
-//   font-size: var(--fs-500);
-// }
-// .fs-400 {
-//   font-size: var(--fs-400);
-// }
-// .fs-300 {
-//   font-size: var(--fs-300);
-// }
-// .fs-200 {
-//   font-size: var(--fs-200);
-// }
+.fs-900 {
+  font-size: var(--fs-900);
+}
+.fs-800 {
+  font-size: var(--fs-800);
+}
+.fs-700 {
+  font-size: var(--fs-700);
+}
+.fs-600 {
+  font-size: var(--fs-600);
+}
+.fs-500 {
+  font-size: var(--fs-500);
+}
+.fs-400 {
+  font-size: var(--fs-400);
+}
+.fs-300 {
+  font-size: var(--fs-300);
+}
+.fs-200 {
+  font-size: var(--fs-200);
+}
 
-// .fs-900,
-// .fs-800,
-// .fs-700,
-// .fs-600 {
-//   line-height: 1.1;
-// }
+.fs-900,
+.fs-800,
+.fs-700,
+.fs-600 {
+  line-height: 1.1;
+}
+
+.description {
+  font-size: rem(15);
+  color: hsl(var(--clr-light));
+  @include breakpoint(medium) {
+    font-size: rem(16);
+  }
+  @include breakpoint(large) {
+    font-size: rem(18);
+  }
+}
 
 // .numbered-title {
-//   font-family: var(--ff-sans-cond);
+//   font-family: var(--ff-condensed);
 //   font-size: var(--fs-500);
 //   text-transform: uppercase;
 //   letter-spacing: rem(4.72);
