Added crew page. Get data from data.json file to display on web

--- a/app/scss/util/_index.scss
+++ b/app/scss/util/_index.scss
@@ -1,5 +1,6 @@
 @forward "container";
 @forward "display";
+@forward "flow";
+@forward "numbertitle";
 @forward "uppercase";
 @forward "typography";
-@forward "numbertitle";
