--- a/app/scss/util/container.scss
+++ b/app/scss/util/container.scss
@@ -3,3 +3,11 @@
   margin-inline: auto;
   max-width: 80rem;
 }
+
+.grid-container {
+  text-align: center;
+  display: grid;
+  place-items: center;
+  padding-inline: 1rem;
+  padding-bottom: 3rem;
+}
