--- a/app/scss/layouts/background.scss
+++ b/app/scss/layouts/background.scss
@@ -29,4 +29,17 @@ body {
       background-position: right center;
     }
   }
+
+  &.crew {
+    background-image: url(../assets/crew/background-crew-mobile.jpg);
+    background-position: left center;
+
+    @include breakpoint(medium) {
+      background-image: url(../assets/crew/background-crew-tablet.jpg);
+    }
+    @include breakpoint(large) {
+      background-image: url(../assets/crew/background-crew-desktop.jpg);
+      background-position: right center;
+    }
+  }
 }
